# music-charts

./: .deepsource.toml  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: commit-message.md  update-docs.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  licence_workflow.yml  test-coverage.yml
_config/: categories.json
_demos/: sandbox_checkpoint_demo.py  sandbox_integration_demo.py  sandbox_musicbee_demo.py  sandbox_normalizers_demo.py  sandbox_observer_demo.py  sandbox_orchestrator_demo.py  sandbox_pipeline_stages_demo.py  sandbox_platform_models_demo.py  sandbox_ranking_models_demo.py  sandbox_repository_demo.py  sandbox_scorer_demo.py  sandbox_songstats_demo.py  sandbox_stats_models_demo.py  sandbox_strategy_demo.py  sandbox_track_models_demo.py  sandbox_youtube_demo.py  sandbox_youtube_models_demo.py
_docs/: IMPROVEMENTS.md  PROJECT_EVOLUTION_v0-v1.md  USER_VALIDATION.md
_docs/USER_VALIDATION/: CODE_REVIEW_FINDINGS.md  ISSUES_FIXED.md  ISSUES_FOUND.md  ISSUE_TEMPLATE.md  TRACKING.md
_legacy/data/: stats_category.json
_legacy/notes/: draft.txt
_legacy/src/: data-mining-completion.py
_scripts/: README.md  _shared.py  manual_link_submission.py  manual_platform_coverage.py  manual_spotify_track_submission.py  manual_youtube_coverage.py  update_coverage_table.py
_tests/: __init__.py  conftest.py
_tests/fixtures/: test_library.xml
_tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_musicbee_integration.py  test_pipeline_integration.py  test_songstats_integration.py  test_youtube_integration.py
_tests/unit/: __init__.py  conftest.py  test_base_client.py  test_checkpoint.py  test_cli.py  test_commands_cache.py  test_commands_errors.py  test_commands_exporters.py  test_commands_formatters.py  test_commands_validators.py  test_config.py  test_json_repository.py  test_logging.py  test_musicbee_client.py  test_normalizers.py  test_observers.py  test_orchestrator.py  test_path_utils.py  test_pipeline_base.py  test_pipeline_stages.py  test_platform_models.py  test_ranking_model.py  test_retry.py  test_scorer.py  test_songstats_client.py  test_stats_model.py  test_text.py  test_track_model.py  test_youtube_client.py  test_youtube_model.py
_tests/unit/analysis/: conftest.py  test_normalizers.py  test_scorer.py  test_strategy.py
_tests/unit/clients/: conftest.py  test_base.py  test_musicbee.py  test_songstats.py  test_youtube.py
_tests/unit/commands/: conftest.py  test_cache.py  test_errors.py  test_exporters.py  test_formatters.py  test_validators.py
_tests/unit/config/: conftest.py  test_constants.py  test_settings.py
_tests/unit/models/: conftest.py  test_base.py  test_platforms.py  test_ranking.py  test_stats.py  test_track.py  test_youtube.py
_tests/unit/pipeline/: conftest.py  test_base.py  test_enrich.py  test_extract.py  test_observer.py  test_observers.py  test_orchestrator.py  test_rank.py
_tests/unit/storage/: conftest.py  test_checkpoint.py  test_json_repository.py  test_repository.py
_tests/unit/utils/: conftest.py  test_logging.py  test_path_utils.py  test_retry.py  test_text.py
data/: power_ranking_2024.csv  selection_2024.json  stats_category.json
msc/: __init__.py  cli.py
msc/analysis/: README_ANALYSIS.md  __init__.py  normalizers.py  scorer.py  strategy.py
msc/clients/: README.md  README_CLIENTS.md  __init__.py  base.py  musicbee.py  songstats.py  youtube.py
msc/commands/: README.md  __init__.py  cache.py  errors.py  exporters.py  formatters.py  validators.py
msc/config/: README_CONFIG.md  __init__.py  constants.py  settings.py
msc/models/: README.md  __init__.py  base.py  platforms.py  ranking.py  stats.py  track.py  youtube.py
msc/pipeline/: README.md  __init__.py  base.py  enrich.py  extract.py  observer.py  observers.py  orchestrator.py  rank.py
msc/storage/: README.md  __init__.py  checkpoint.py  json_repository.py  repository.py
msc/utils/: README.md  __init__.py  logging.py  path_utils.py  retry.py  text.py
notebooks/: power_ranking_2024.ipynb
src/: billing.py  data-mining-completion.py  data-mining-prep.py  data-mining-sstats.py  data-mining.py
